# unity-vr-jigsaw

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  opencode.json
.gemini/config/: mcp_config.json
UnityApp/: CLAUDE.md
UnityApp/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
docs/: 3d_video_jigsaw_plan.md  jigsaw_tool_plan.md  unity_jigsaw_vr_implementation.md  unity_jigsaw_vr_spec.md
docs/ignore-old-docs/: slicing.md
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/backend/: main.py  requirements.txt  routes.py
tauri-app/src/: App.svelte  app.css  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs  main.rs
test_output/: checkpoint.json  pieces.glb
test_tauri_output/: checkpoint.json  pieces.glb
tools/: UNITY_C_SHARP_PORT_SPEC.md  profile_run.py
tools/_diag/: checkpoint.json
tools/assets/: CarConcept.gltf
tools/jigsaw_generator/: DH_filled.glb  DH_merged.glb  README.md  __init__.py  config.py  geometry_utils.py  jigsaw_nubs.py  main.py  mesh_cutter.py  mesh_io.py  partitioner.py  planar_lib.py  planar_main.py  planar_phase_010.py  planar_phase_020.py  planar_phase_021.py  planar_phase_022.py  planar_phase_030.py  planar_phase_040.py  planar_run.py  planar_step_01_config.py  planar_step_02_geometry_utils.py  planar_step_03_mesh_io.py  planar_step_04_mesh_cutter.py  planar_step_05_snap_zones.py  planar_step_08_main.py  (+7 more)
(+77 files in other folders)
